assets/css/main.css
/* ... */
input[type="button"].xlarge,
input[type="submit"].xlarge,
input[type="reset"].xlarge,
button.xlarge,
.button.xlarge {
	font-size: 1.5em;
	padding: 0.5em 1.25em 0.5em 1.25em;
}

@media screen and (max-width: 736px) {

	input[type="button"],
	input[type="submit"],
	input[type="reset"],
	button,
	.button {
		width: 100%;
	}

}

/* List */

ul {
	list-style: disc;
	padding-left: 1em;
}

ul li {
	padding-left: 0.5em;
}

ol {
	list-style: decimal;
	padding-left: 1.25em;
}

ol li {
	padding-left: 0.25em;
}

/* Actions */

ul.actions {
	list-style: none;
	padding-left: 0;
}

ul.actions li {
	display: inline-block;
	padding-left: 0;
	margin: 0 0 0 0.5em;
}

ul.actions li:first-child {
	margin-left: 0;
}

@media screen and (max-width: 736px) {

	ul.actions li {
		display: block;
		margin: 0.75em 0 0 0;
	}

	ul.actions li:first-child {
		margin-top: 0;
	}

}

/* Icons */

.icon {
	text-decoration: none;
	position: relative;
	text-decoration: none;
}

.icon:before {
	-moz-osx-font-smoothing: grayscale;
	-webkit-font-smoothing: antialiased;
	display: inline-block;
	font-style: normal;
	font-variant: normal;
	text-rendering: auto;
	line-height: 1;
	text-transform: none !important;
	font-family: 'Font Awesome 5 Free';
	font-weight: 400;
}

.icon.solid:before {
	font-weight: 900;
}

.icon.brands:before {
	font-family: 'Font Awesome 5 Brands';
}

.icon:before {
	line-height: inherit;
}

.icon>.label {
	display: none;
}

/* Nav */

#nav {
	text-align: center;
	height: 4.25em;
	cursor: default;
}

#nav a {
	position: relative;
	display: inline-block;
	color: #ffffff;
	width: 1em;
	height: 1em;
	line-height: 0.9em;
	font-size: 2.5em;
	margin: 0 0.25em 0 0.25em;
	opacity: 0.35;
	outline: 0;
	-moz-transition: opacity .25s ease-in-out;
	-webkit-transition: opacity .25s ease-in-out;
	-ms-transition: opacity .25s ease-in-out;
	transition: opacity .25s ease-in-out;
}

#nav a.icon:before {
	padding-right: 0;
}

#nav a:before {
	font-size: 0.8em;
}

#nav a:after {
	content: '';
	display: block;
	position: absolute;
	left: 50%;
	bottom: -0.7em;
	margin-left: -0.5em;
	border-bottom: solid 0em #ffffffbf;
	border-left: solid 0.5em transparent;
	border-right: solid 0.5em transparent;
	-moz-transition: border-bottom-width .25s ease-in-out;
	-webkit-transition: border-bottom-width .25s ease-in-out;
	-ms-transition: border-bottom-width .25s ease-in-out;
	transition: border-bottom-width .25s ease-in-out;
	z-index: 999;
}

#nav a span {
	display: block;
	position: absolute;
	background: #0003c981;
	color: #ffffff;
	top: -2.75em;
	font-size: 0.3em;
	height: 2.25em;
	line-height: 2.25em;
	left: 50%;
	opacity: 0;
	-moz-transition: opacity .25s ease-in-out;
	-webkit-transition: opacity .25s ease-in-out;
	-ms-transition: opacity .25s ease-in-out;
	transition: opacity .25s ease-in-out;
	margin-left: -2.75em;
	width: max-content;
	padding: 0 4px;
	border-radius: 6px;
}

#nav a span:after {
	content: '';
	display: block;
	position: absolute;
	bottom: -0.6em;
	left: 50%;
	margin-left: -0.6em;
	border-top: solid 0.6em #0003c981;
	border-left: solid 0.6em transparent;
	border-right: solid 0.6em transparent;
}

#nav a:hover {
	opacity: 1.0;
}

#nav a:hover span {
	opacity: 1.0;
}

#nav a.active {
	opacity: 1.0;
}

#nav a.active:after {
	border-bottom-width: 0.5em;
}

@media screen and (max-width: 980px) {

	#nav a span {
		display: none;
	}

}

/* Wrapper */

#wrapper {
	width: 45em;
	margin: 0 auto;
	min-height: 100vh;
	max-width: 100%;
	padding: 4em 0;
	display: -moz-flex;
	display: -webkit-flex;
	display: -ms-flex;
	display: flex;
	-moz-flex-direction: column;
	-webkit-flex-direction: column;
	-ms-flex-direction: column;
	flex-direction: column;
	-moz-align-items: center;
	-webkit-align-items: center;
	-ms-align-items: center;
	align-items: center;
	-moz-justify-content: center;
	-webkit-justify-content: center;
	-ms-justify-content: center;
	justify-content: center;
	-moz-transition: opacity 1s ease-in-out;
	-webkit-transition: opacity 1s ease-in-out;
	-ms-transition: opacity 1s ease-in-out;
	transition: opacity 1s ease-in-out;
}

body.is-preload #wrapper {
	opacity: 0;
}

@media screen and (max-width: 1280px) {

	#wrapper {
		padding: 3em 0;
		max-width: calc(100% - 6em);
	}

}

@media screen and (max-width: 980px) {

	#wrapper {
		padding: 1.5em 0;
		max-width: calc(100% - 8em);
	}

}

@media screen and (max-width: 736px) {

	#wrapper {
		padding: 1em 0;
		max-width: calc(100% - 2em);
	}

}

@media screen and (max-width: 360px) {

	#wrapper {
		padding: 1em 0;
		max-width: 100%;
	}

}

/* Main */

#main {
	position: relative;
	overflow: hidden;
	box-shadow: 1.8px 3.5px 3.5px hsl(0deg 0% 0% / 0.45);
	width: 100%;
	max-width: 900px;
	background: #ffffffbf;
	border-radius: 10px;
	-moz-transition: min-height 0.5s ease-in-out, max-height 0.5s ease-in-out;
	-webkit-transition: min-height 0.5s ease-in-out, max-height 0.5s ease-in-out;
	-ms-transition: min-height 0.5s ease-in-out, max-height 0.5s ease-in-out;
	transition: min-height 0.5s ease-in-out, max-height 0.5s ease-in-out;
}

#main>.panel {
	-moz-transition: opacity 0.25s ease-in-out;
	-webkit-transition: opacity 0.25s ease-in-out;
	-ms-transition: opacity 0.25s ease-in-out;
	transition: opacity 0.25s ease-in-out;
	margin-bottom: 0;
	position: relative;
	padding: 3.5em 2.5em 2.5em 2.5em;
	width: 100%;
}

#main>.panel.inactive {
	opacity: 0;
}

@media screen and (max-width: 736px) {

	#main>.panel {
		padding: 2em 1.5em 1.5em 1.5em;
	}

}

#main>.panel.intro {
	padding: 0;
	height: 20em;
	display: -moz-flex;
	display: -webkit-flex;
	display: -ms-flex;
	display: flex;
	-moz-flex-direction: row;
	-webkit-flex-direction: row;
	-ms-flex-direction: row;
	flex-direction: row;
	-moz-align-items: center;
	-webkit-align-items: center;
	-ms-align-items: center;
	align-items: center;
}
/* ... */

